@@ -4,6 +4,9 @@ python-apt (0.7.10.4) UNRELEASED; urgency=low
   * data/templates/Ubuntu.info.in:
     - updated for the new ubuntu karmic version
 
+  [ Otavio Salvador ]
+  * utils/get_debian_mirrors.py: updated to support current mirror page.
+
  -- Michael Vogt <mvo@debian.org>  Tue, 05 May 2009 12:03:27 +0200
 
 python-apt (0.7.10.3) unstable; urgency=low
